# c_plus_labs

./: CMakeLists.txt  README.md  try.cpp
B-tree/: b_tree.h  main.cpp
BST-tree/: binary_search_tree.h
First_lab/logger/: Makefile  logger_builder_concrete.cpp  main.cpp
First_lab/memory/: CMakeLists.txt  Makefile  main.cpp  memory_concrete.h
First_lab/the_good_the_bad_the_ugly/: Makefile  alloc_types.cpp  alloc_types.h  file228.txt  main.cpp  memory.h
associative_container/: associative_container.h
db_project/: database.cpp  database.h
descriptor/: alloc_types.cpp  alloc_types.h  main.cpp  memory.cpp  memory.h
logger/: Makefile  config.json  logger_builder.h  logger_builder_concrete.cpp  logger_builder_concrete.h  logger_concrete.cpp  main.cpp
memory/: Makefile  file228.txt  main.cpp  memory.cpp  memory.h  memory_concrete.cpp  memory_concrete.h
the_good_the_bad_the_ugly/: CMakeLists.txt  Makefile  alloc_types.cpp  alloc_types.h  main.cpp  memory.h
